// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Banner Basic 1`] = `
<div
  className="psds-banner psds-banner--color-blue"
>
  <p
    className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark psds-banner__text"
  >
    Banner text
  </p>
</div>
`;

exports[`Storyshots Components/Banner Button 1`] = `
<div
  style={
    Object {
      "display": "grid",
      "gap": "20px",
      "gridTemplateColumns": "1fr 1fr",
    }
  }
>
  <div
    className="psds-banner psds-banner--color-blue"
  >
    <p
      className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark psds-banner__text"
    >
      blue
       with button
       
      <button
        className="psds-button psds-button--layout-inline psds-button--size-small psds-button--appearance-stroke psds-theme--dark psds-banner__button psds-banner__button--color-blue overridden"
        disabled={false}
      >
        <span
          aria-hidden={false}
          className="psds-button__text"
        >
          Button
        </span>
      </button>
    </p>
    <button
      className="psds-banner__dismiss"
      onClick={[Function]}
    >
      <div
        className="psds-icon psds-icon--size-medium"
      >
        <svg
          aria-label="x icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M18.703 6 18 5.297a.5.5 0 0 0-.707 0L12 10.59 6.707 5.297a.5.5 0 0 0-.707 0L5.297 6a.5.5 0 0 0 0 .707L10.59 12l-5.293 5.293a.5.5 0 0 0 0 .707l.703.703a.5.5 0 0 0 .707 0L12 13.41l5.293 5.293a.5.5 0 0 0 .707 0l.703-.703a.5.5 0 0 0 0-.707L13.41 12l5.293-5.293a.5.5 0 0 0 0-.707z"
          />
        </svg>
      </div>
    </button>
  </div>
  <div
    className="psds-banner psds-banner--color-green"
  >
    <p
      className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark psds-banner__text"
    >
      green
       with button
       
      <button
        className="psds-button psds-button--layout-inline psds-button--size-small psds-button--appearance-stroke psds-theme--dark psds-banner__button psds-banner__button--color-green overridden"
        disabled={false}
      >
        <span
          aria-hidden={false}
          className="psds-button__text"
        >
          Button
        </span>
      </button>
    </p>
    <button
      className="psds-banner__dismiss"
      onClick={[Function]}
    >
      <div
        className="psds-icon psds-icon--size-medium"
      >
        <svg
          aria-label="x icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M18.703 6 18 5.297a.5.5 0 0 0-.707 0L12 10.59 6.707 5.297a.5.5 0 0 0-.707 0L5.297 6a.5.5 0 0 0 0 .707L10.59 12l-5.293 5.293a.5.5 0 0 0 0 .707l.703.703a.5.5 0 0 0 .707 0L12 13.41l5.293 5.293a.5.5 0 0 0 .707 0l.703-.703a.5.5 0 0 0 0-.707L13.41 12l5.293-5.293a.5.5 0 0 0 0-.707z"
          />
        </svg>
      </div>
    </button>
  </div>
  <div
    className="psds-banner psds-banner--color-yellow"
  >
    <p
      className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark psds-banner__text"
    >
      yellow
       with button
       
      <button
        className="psds-button psds-button--layout-inline psds-button--size-small psds-button--appearance-stroke psds-theme--dark psds-banner__button psds-banner__button--color-yellow overridden"
        disabled={false}
      >
        <span
          aria-hidden={false}
          className="psds-button__text"
        >
          Button
        </span>
      </button>
    </p>
    <button
      className="psds-banner__dismiss"
      onClick={[Function]}
    >
      <div
        className="psds-icon psds-icon--size-medium"
      >
        <svg
          aria-label="x icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M18.703 6 18 5.297a.5.5 0 0 0-.707 0L12 10.59 6.707 5.297a.5.5 0 0 0-.707 0L5.297 6a.5.5 0 0 0 0 .707L10.59 12l-5.293 5.293a.5.5 0 0 0 0 .707l.703.703a.5.5 0 0 0 .707 0L12 13.41l5.293 5.293a.5.5 0 0 0 .707 0l.703-.703a.5.5 0 0 0 0-.707L13.41 12l5.293-5.293a.5.5 0 0 0 0-.707z"
          />
        </svg>
      </div>
    </button>
  </div>
  <div
    className="psds-banner psds-banner--color-red"
  >
    <p
      className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark psds-banner__text"
    >
      red
       with button
       
      <button
        className="psds-button psds-button--layout-inline psds-button--size-small psds-button--appearance-stroke psds-theme--dark psds-banner__button psds-banner__button--color-red overridden"
        disabled={false}
      >
        <span
          aria-hidden={false}
          className="psds-button__text"
        >
          Button
        </span>
      </button>
    </p>
    <button
      className="psds-banner__dismiss"
      onClick={[Function]}
    >
      <div
        className="psds-icon psds-icon--size-medium"
      >
        <svg
          aria-label="x icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M18.703 6 18 5.297a.5.5 0 0 0-.707 0L12 10.59 6.707 5.297a.5.5 0 0 0-.707 0L5.297 6a.5.5 0 0 0 0 .707L10.59 12l-5.293 5.293a.5.5 0 0 0 0 .707l.703.703a.5.5 0 0 0 .707 0L12 13.41l5.293 5.293a.5.5 0 0 0 .707 0l.703-.703a.5.5 0 0 0 0-.707L13.41 12l5.293-5.293a.5.5 0 0 0 0-.707z"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/Banner Child Anchor 1`] = `
<div
  className="psds-banner psds-banner--color-blue"
>
  <p
    className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark psds-banner__text"
  >
    this is the text with an 
    <a
      href="https://duckduckgo.com"
    >
      anchor tag
    </a>
    .
  </p>
</div>
`;

exports[`Storyshots Components/Banner Child Anchor Yellow 1`] = `
<div
  className="psds-banner psds-banner--color-yellow"
>
  <p
    className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark psds-banner__text"
  >
    this is the text with an 
    <a
      href="https://duckduckgo.com"
    >
      anchor tag
    </a>
    .
  </p>
</div>
`;

exports[`Storyshots Components/Banner Child Link 1`] = `
<div
  className="psds-banner psds-banner--color-blue"
>
  <p
    className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark psds-banner__text"
  >
    this is the text with an
     
    <a
      className="psds-link psds-link--appearance-default psds-theme--dark"
      href="https://duckduckgo.com"
    >
      Link component
    </a>
  </p>
</div>
`;

exports[`Storyshots Components/Banner Colors 1`] = `
<div
  style={
    Object {
      "display": "grid",
      "gap": "20px",
      "gridTemplateColumns": "1fr 1fr",
    }
  }
>
  <div
    className="psds-banner psds-banner--color-blue"
  >
    <p
      className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark psds-banner__text"
    >
      blue
    </p>
    <button
      className="psds-banner__dismiss"
      onClick={[Function]}
    >
      <div
        className="psds-icon psds-icon--size-medium"
      >
        <svg
          aria-label="x icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M18.703 6 18 5.297a.5.5 0 0 0-.707 0L12 10.59 6.707 5.297a.5.5 0 0 0-.707 0L5.297 6a.5.5 0 0 0 0 .707L10.59 12l-5.293 5.293a.5.5 0 0 0 0 .707l.703.703a.5.5 0 0 0 .707 0L12 13.41l5.293 5.293a.5.5 0 0 0 .707 0l.703-.703a.5.5 0 0 0 0-.707L13.41 12l5.293-5.293a.5.5 0 0 0 0-.707z"
          />
        </svg>
      </div>
    </button>
  </div>
  <div
    className="psds-banner psds-banner--color-green"
  >
    <p
      className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark psds-banner__text"
    >
      green
    </p>
    <button
      className="psds-banner__dismiss"
      onClick={[Function]}
    >
      <div
        className="psds-icon psds-icon--size-medium"
      >
        <svg
          aria-label="x icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M18.703 6 18 5.297a.5.5 0 0 0-.707 0L12 10.59 6.707 5.297a.5.5 0 0 0-.707 0L5.297 6a.5.5 0 0 0 0 .707L10.59 12l-5.293 5.293a.5.5 0 0 0 0 .707l.703.703a.5.5 0 0 0 .707 0L12 13.41l5.293 5.293a.5.5 0 0 0 .707 0l.703-.703a.5.5 0 0 0 0-.707L13.41 12l5.293-5.293a.5.5 0 0 0 0-.707z"
          />
        </svg>
      </div>
    </button>
  </div>
  <div
    className="psds-banner psds-banner--color-yellow"
  >
    <p
      className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark psds-banner__text"
    >
      yellow
    </p>
    <button
      className="psds-banner__dismiss"
      onClick={[Function]}
    >
      <div
        className="psds-icon psds-icon--size-medium"
      >
        <svg
          aria-label="x icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M18.703 6 18 5.297a.5.5 0 0 0-.707 0L12 10.59 6.707 5.297a.5.5 0 0 0-.707 0L5.297 6a.5.5 0 0 0 0 .707L10.59 12l-5.293 5.293a.5.5 0 0 0 0 .707l.703.703a.5.5 0 0 0 .707 0L12 13.41l5.293 5.293a.5.5 0 0 0 .707 0l.703-.703a.5.5 0 0 0 0-.707L13.41 12l5.293-5.293a.5.5 0 0 0 0-.707z"
          />
        </svg>
      </div>
    </button>
  </div>
  <div
    className="psds-banner psds-banner--color-red"
  >
    <p
      className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark psds-banner__text"
    >
      red
    </p>
    <button
      className="psds-banner__dismiss"
      onClick={[Function]}
    >
      <div
        className="psds-icon psds-icon--size-medium"
      >
        <svg
          aria-label="x icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M18.703 6 18 5.297a.5.5 0 0 0-.707 0L12 10.59 6.707 5.297a.5.5 0 0 0-.707 0L5.297 6a.5.5 0 0 0 0 .707L10.59 12l-5.293 5.293a.5.5 0 0 0 0 .707l.703.703a.5.5 0 0 0 .707 0L12 13.41l5.293 5.293a.5.5 0 0 0 .707 0l.703-.703a.5.5 0 0 0 0-.707L13.41 12l5.293-5.293a.5.5 0 0 0 0-.707z"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/Banner On Click 1`] = `
<div
  className="psds-banner psds-banner--color-blue"
>
  <p
    className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark psds-banner__text"
  >
    Banner text
  </p>
  <button
    className="psds-banner__dismiss"
    onClick={[Function]}
  >
    <div
      className="psds-icon psds-icon--size-medium"
    >
      <svg
        aria-label="x icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M18.703 6 18 5.297a.5.5 0 0 0-.707 0L12 10.59 6.707 5.297a.5.5 0 0 0-.707 0L5.297 6a.5.5 0 0 0 0 .707L10.59 12l-5.293 5.293a.5.5 0 0 0 0 .707l.703.703a.5.5 0 0 0 .707 0L12 13.41l5.293 5.293a.5.5 0 0 0 .707 0l.703-.703a.5.5 0 0 0 0-.707L13.41 12l5.293-5.293a.5.5 0 0 0 0-.707z"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`Storyshots Components/Banner On Click Long Text 1`] = `
<div
  className="psds-banner psds-banner--color-blue"
>
  <p
    className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark psds-banner__text"
  >
    this is the long text. this is the long text. this is the long text. this
  is the long text. this is the long text. this is the long text. this is
  the long text. this is the long text. this is the long text. this is the
  long text. this is the long text. this is the long text.{' '} 
  </p>
  <button
    className="psds-banner__dismiss"
    onClick={[Function]}
  >
    <div
      className="psds-icon psds-icon--size-medium"
    >
      <svg
        aria-label="x icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M18.703 6 18 5.297a.5.5 0 0 0-.707 0L12 10.59 6.707 5.297a.5.5 0 0 0-.707 0L5.297 6a.5.5 0 0 0 0 .707L10.59 12l-5.293 5.293a.5.5 0 0 0 0 .707l.703.703a.5.5 0 0 0 .707 0L12 13.41l5.293 5.293a.5.5 0 0 0 .707 0l.703-.703a.5.5 0 0 0 0-.707L13.41 12l5.293-5.293a.5.5 0 0 0 0-.707z"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`Storyshots Components/Banner Style Prop 1`] = `
<div
  className="psds-banner psds-banner--color-blue"
  style={
    Object {
      "outline": "3px solid red",
    }
  }
>
  <p
    className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark psds-banner__text"
  >
    Banner text
  </p>
</div>
`;
